2020-09-02 Wiley E. Hill <wileyhill@gmail.com>

    * include/x_toolbars.h: Revise the tool-tip for TBTS_EDIT_SELECT_ALL.

    * src/iface/i_command.c: Include void in definition of function
      get_last_command and update documentation.


    * src/x/x_print.c: Update x_print_setup documentation.

2020-08-28 Wiley E. Hill <wileyhill@gmail.com>

    * data/Makefile.am: Redirect error output from update-mime-database
      to null to suppress pesky "not in the search path" message.

    * etc/system-gschemrc.scm: Revise edit-redo menu tool tips.

    * src/object/o_edit.c: Revise o_edit_offset_hot to not offset the
      cursor 2 x X.

    * src/x/x_console.c: Translate console message string.

2020-08-29 Wiley E. Hill <wileyhill@gmail.com>

    * po/en_GB.po: Update Great Britain.
    * po/ja.po: Update Japanese translations.
    * po/kh.po: Update Khmer translations.
    * po/ml.po: Updated Malayalam translations.
    * po/nl.po: Update Dutch translations.
    * po/pl.po: Update Polish translations.
    * po/pt.po: Update Portuguese translations.
    * po/pt_BR.po: Update Brazilian Portuguese translations.
    * po/ru.po: Update Russian translations.

2020-08-27 Wiley E. Hill <wileyhill@gmail.com>

    * src/object/o_edit.c: Revise o_edit_offset_hot to the nearest point
      of an object if only a single object is being offset, to establish
      the abscissa for the new pointer location.

    * src/x/x_dialog.c: Update x_dialog_set_icon function documentation.

    * src/x/x_toolbars.c: Add todo documentation templates.

2020-08-25 Wiley E. Hill <wileyhill@gmail.com>

    * etc/system-gschemrc.scm: Revise menu tool tips.

    * src/x/x_print.c: Add tooltip to the print_button.

2020-08-24 Wiley E. Hill <wileyhill@gmail.com>

    * src/x/x_toolbars.c: Make circle label lower case.

    * src/x/x_compselect.c: Utilize geda_check_menu_item_set_as_radio macro.

2020-08-23 Wiley E. Hill <wileyhill@gmail.com>

    * po/af.po: Update Afrikaans translations.